2025-06-24  Zhengyi Fu  <i@fuzy.me>

	* .gitignore: Add project.eld and network-security.eld.

2025-06-23  Zhengyi Fu  <i@fuzy.me>

	Enable --autostash in `magit-pull' by default

	* transient/levels.el (magit-pull): Set level of --autostash to 1.
	* transient/values.el (magit-pull): Add --autostash by default.

2025-06-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Do not send notification on
	successful sync.

2025-06-22  Zhengyi Fu  <i@fuzy.me>

	Add elfeed-web

	* packages.el (web-server, elfeed-web): New packages.
	(straight-host-usernames): Update default usernames.

2025-06-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-db): Require filenotify.

2025-06-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-db): New function.  Reload feeds.eld on change.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-feeds-inhibit-save): Remove variable.
	(+elfeed-feeds-save): Remove function.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-browse-eww): New command.  Assigned to "e" in
	`elfeed-show-mode-map'.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el (+gptel-search-emacs-lists): New function.
	(+gptel-url-retrieve): New function.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	Minor update to gptel configuration

	* site-lisp/gptel-config.el (+gptel-edit-file): Renamed from
	`my-gptel--edit_file'.  All calls changed.
	(+gptel-review-pullreq): Add &rest _ args.
	(+gptel-review-pullreq): Add a star to the end of the buffer name.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-show-tag): Use `elfeed-db-get-all-tags' instead
	of the tags history as the completion table.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Kill unused buffers.
	(+gptel-request-changes): Better error handling.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	Add a command to review PRs automatically with LLM

	* site-lisp/gptel-config.el (+gptel-review-pullreq): New command.

2025-06-19  Zhengyi Fu  <i@fuzy.me>
